--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,25 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Google font -->
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+<!-- Bootstrap -->
+<link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css"/>
+<!-- Slick -->
+<link type="text/css" rel="stylesheet" href="/assets/css/slick.css"/>
+<link type="text/css" rel="stylesheet" href="/assets/css/slick-theme.css"/>
+<!-- nouislider -->
+<link type="text/css" rel="stylesheet" href="/assets/css/nouislider.min.css"/>
+<!-- Font Awesome Icon -->
+<link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+<!-- Custom stlylesheet -->
+<link type="text/css" rel="stylesheet" href="/assets/css/style.css"/>
+
+
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
